[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/unidad_type.gd" type="Script" id=1]
[ext_resource path="res://scripts/unidad.gd" type="Script" id=2]
[ext_resource path="res://sprites/soldado.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13.342, 5.0163 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 11.1417, 10 )

[sub_resource type="CanvasItemShader" id=3]

_code = {
"fragment": "color color_original = tex(TEXTURE,UV);
uniform color color_deseado = color(1,1,1,1);
color color_final = color_original * color_deseado;
COLOR = color_final;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=4]

shader/shader = SubResource( 3 )
shader/shading_mode = 0
shader_param/color_deseado = Color( 1, 1, 1, 1 )

[node name="unidad" type="Node"]

script/script = ExtResource( 1 )
id = 2

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]

transform/pos = Vector2( 232.336, 341.261 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )
MOV_SPEED = 50.0
ROT_SPEED = 15.0
COOLDOWN_W1 = 3.0
COOLDOWN_W2 = 1.5
PRECISION = 97
granada_flash = null
FLASH_DURATION = null
spr_original = null
spr_espia = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Area2D"]

material/material = SubResource( 4 )
texture = ExtResource( 3 )
flip_v = true
hframes = 2

[node name="rango_w1" type="RayCast2D" parent="KinematicBody2D"]

transform/pos = Vector2( 0, 15 )
enabled = false
cast_to = Vector2( 0, 900 )
layer_mask = 1
type_mask = 15

[node name="rango_w2" type="RayCast2D" parent="KinematicBody2D"]

transform/pos = Vector2( 0, 15 )
enabled = false
cast_to = Vector2( 0, 300 )
layer_mask = 1
type_mask = 15

[node name="cooldown" type="Timer" parent="KinematicBody2D"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="input_event" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_input_event"]

[connection signal="timeout" from="KinematicBody2D/cooldown" to="KinematicBody2D" method="_on_cooldown_timeout"]


